tests/miniJava/pos/000803_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new int [ 0 ] ) System.out.println ( { } ) ; else if ( 0 ) { } else { } } }
