tests/miniJava/neg/004924_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , public int [] java ) { return 0 ; } }
